--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dotnet.defaultSolution": "exercicio01/exercicio01.sln"
+    "dotnet.defaultSolution": "desafio01/exercicio02/exercicio01.sln"
 }
